--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "jasmine": "^3.3.1",
     "jasmine-core": "^3.3.0",
     "karma": "^6.3.4",
